--- a/archives/zhihu-questions/2024-04-09.md
+++ b/archives/zhihu-questions/2024-04-09.md
@@ -1,32 +1,63 @@
 # 2024-04-09
 
-共 143 条
+共 164 条
 
 <!-- BEGIN ZHIHUQUESTIONS -->
-<!-- 最后更新时间 Tue Apr 09 2024 12:00:39 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Apr 09 2024 13:00:57 GMT+0800 (China Standard Time) -->
 1. [特朗普被曝正研究如何施压乌克兰放弃部分领土，从而结束俄乌冲突，如何评价特朗普这一想法？](https://www.zhihu.com/question/652209049)
 1. [2022 年 11 月以来，中国黄金储备 17 个月里增加了 1010 万盎司，如何看待这一数据？](https://www.zhihu.com/question/652181205)
 1. [兰大核学院公布研究生调剂拟录取名单，虐猫考生未在其中，如何看待把个人品行纳入研究生复试标准？](https://www.zhihu.com/question/652314073)
-1. [财政部表示「中美两个工作组的第四次会议拟于 4 月中旬举行」，哪些信息值得关注？](https://www.zhihu.com/question/652244579)
+1. [消息称暴雪国服本周官宣回归，网易丁磊和暴雪新 CEO 会面，哪些信息值得关注？](https://www.zhihu.com/question/652327492)
 1. [为什么现在科技热点是GPU，不是CPU了？](https://www.zhihu.com/question/651936550)
-1. [读过的书大部分会忘掉，那么读书的意义在哪里?](https://www.zhihu.com/question/652241693)
-1. [如何评价华为推出支持 AI 人脸识别技术的华为智能门锁 Plus ，有哪些值得关注的信息？](https://www.zhihu.com/question/652312311)
+1. [财政部表示「中美两个工作组的第四次会议拟于 4 月中旬举行」，哪些信息值得关注？](https://www.zhihu.com/question/652244579)
+1. [Zara 回应撤出中国传闻，工作人员称「目前没相关消息」，如何看待此事？Zara 大面积闭店原因为何？](https://www.zhihu.com/question/652321642)
 1. [10个字以内，你能讲一个悲伤的故事吗？](https://www.zhihu.com/question/652241723)
-1. [有什么适合低头族的运动方式？](https://www.zhihu.com/question/652313241)
-1. [自然界有哪些长相可爱的动物？](https://www.zhihu.com/question/28248719)
+1. [山东交通学院发生一起伤害事件，嫌疑人已被抓获，具体情况如何？](https://www.zhihu.com/question/652188859)
+1. [写网文怎么顺其自然地引出一个人物的名字？](https://www.zhihu.com/question/652193170)
+1. [跟faker长得一模一样能赚钱吗？](https://www.zhihu.com/question/650401369)
 1. [购买新能源汽车时，你会考虑买30万以上的车吗？](https://www.zhihu.com/question/652195889)
 1. [孩子慢慢长大慢慢发现同学们的家庭经济条件各不相同，你们是怎么应对孩子这些问题的？](https://www.zhihu.com/question/650256718)
+1. [如何评价华为推出支持 AI 人脸识别技术的华为智能门锁 Plus ，有哪些值得关注的信息？](https://www.zhihu.com/question/652312311)
+1. [自然界有哪些长相可爱的动物？](https://www.zhihu.com/question/28248719)
+1. [2024年5亿大模型新应用井喷即将到来，算力问题该如何解决？](https://www.zhihu.com/question/652290524)
+1. [《星穹铁道》的主角为什么越来越没有存在感了？](https://www.zhihu.com/question/652007615)
+1. [韩国医生「辞职潮」风波持续，急救系统濒临崩溃，如何看待此事？「辞职潮」还将带来哪些影响？](https://www.zhihu.com/question/652336676)
 1. [如何科学地逛动物园？](https://www.zhihu.com/question/652117623)
+1. [马路三大妈里为何没有本田?](https://www.zhihu.com/question/618474815)
+1. [作为家长你会教育孩子尊重老师么？](https://www.zhihu.com/question/652166108)
 1. [想快速瘦肚子，有什么好的运动推荐？](https://www.zhihu.com/question/652313304)
+1. [你还记得和你的小猫第一次见面的场景么？](https://www.zhihu.com/question/650506075)
+1. [你认为“中式教育”缺少的是什么？](https://www.zhihu.com/question/652070518)
+1. [有什么让人大开眼界的动物照片？](https://www.zhihu.com/question/650084129)
+1. [如何看待有人一年读100本书？](https://www.zhihu.com/question/652241649)
+1. [趋势交易者是孤独的吗？](https://www.zhihu.com/question/652321553)
+1. [哪一个瞬间让你觉得作为一位中国公民，感到十分地自豪和骄傲？](https://www.zhihu.com/question/264929789)
+1. [14岁女儿抑郁焦虑休学一年多了，一年级的儿子也不想去学校，总是问为什么姐姐可以不用上应该怎么解释？](https://www.zhihu.com/question/649996632)
 1. [二胎家庭只有一间儿童房，如何布置才能满足两个孩子的居住需求？](https://www.zhihu.com/question/647382603)
+1. [那些让你触动内心的书籍你还记得吗？](https://www.zhihu.com/question/652328408)
+1. [古遗址的发掘对研究历史有什么意义？](https://www.zhihu.com/question/650719744)
+1. [计算机专业不干互联网不热爱技术，还能转行干什么？](https://www.zhihu.com/question/651252689)
+1. [当下属跟你说你管太细了，你会改变你的管理吗？](https://www.zhihu.com/question/651602942)
+1. [为什么《甄嬛传》能长盛不衰？](https://www.zhihu.com/question/320896213)
+1. [美国车那么便宜，为什么不是满街豪车？](https://www.zhihu.com/question/22967831)
 1. [有哪些给年轻人的忠告？](https://www.zhihu.com/question/287309839)
-1. [有钱真的会有底气吗?](https://www.zhihu.com/question/652080225)
 1. [在你的相册里，最具有生活气息的是哪张照片？背后有什么故事？](https://www.zhihu.com/question/613886795)
 1. [情绪稳定的本质是什么？](https://www.zhihu.com/question/607297046)
+1. [读过的书大部分会忘掉，那么读书的意义在哪里?](https://www.zhihu.com/question/652241693)
+1. [有什么让你吃一次就记一辈子的美食？](https://www.zhihu.com/question/442763529)
+1. [男子举报教师妻子骗钱赌博枉为人师，教育局回应「已接到举报，正在调查」，如何看待此事？](https://www.zhihu.com/question/652082204)
+1. [有什么适合低头族的运动方式？](https://www.zhihu.com/question/652313241)
+1. [是否应该对另一半完全坦白过去的情史（包括细节）？](https://www.zhihu.com/question/31321209)
+1. [为什么修仙小说的人活了成千上万年却还是“人”的思维方式呢？](https://www.zhihu.com/question/646679936)
+1. [为什么NBA联赛没有降级制度？](https://www.zhihu.com/question/439863351)
+1. [如何看待 4 月 6 日消失已久的《英雄联盟》主播 Doinb 突然复播？](https://www.zhihu.com/question/652057567)
+1. [怎么区分自以为是和自信？](https://www.zhihu.com/question/643325085)
+1. [感动中国 2023 年度人物公布，俞鸿儒、刘玲琍、张雨霏等在列，他们有哪些瞬间让你印象深刻？](https://www.zhihu.com/question/652253057)
+1. [运动健身中你交过朋友么？如何看待运动健身中的友谊？它对你的运动有何作用？](https://www.zhihu.com/question/651436051)
+1. [有钱真的会有底气吗?](https://www.zhihu.com/question/652080225)
 1. [为什么和婆婆在一起生活很压抑？](https://www.zhihu.com/question/649054028)
 1. [保护动物，我们能做什么？](https://www.zhihu.com/question/652314134)
 1. [固态电池轻松实现续航 1000 公里，多家厂商走到台前，固态电池是什么？大规模商业化有哪些问题需解决？](https://www.zhihu.com/question/652186190)
-1. [男子举报教师妻子骗钱赌博枉为人师，教育局回应「已接到举报，正在调查」，如何看待此事？](https://www.zhihu.com/question/652082204)
 1. [婚姻中最大的讽刺是什么？](https://www.zhihu.com/question/651343148)
 1. [江西南昌发生一起交通事故，驾驶员突发心脏不适失去意识，已造成 3 人死亡 7 人受伤，具体情况如何？](https://www.zhihu.com/question/652200420)
 1. [Unity为什么推荐在FixedUpdate处理物理模拟？](https://www.zhihu.com/question/642445192)
@@ -36,27 +67,21 @@
 1. [如何走出心灵困境？](https://www.zhihu.com/question/652298641)
 1. [为什么每天出门的时候我家猫都不会送我，但是下班却会积极得迎接我？](https://www.zhihu.com/question/649237609)
 1. [保护珍稀动物是否符合进化论？](https://www.zhihu.com/question/31195477)
-1. [运动健身中你交过朋友么？如何看待运动健身中的友谊？它对你的运动有何作用？](https://www.zhihu.com/question/651436051)
-1. [消息称暴雪国服本周官宣回归，网易丁磊和暴雪新 CEO 会面，哪些信息值得关注？](https://www.zhihu.com/question/652327492)
 1. [电影《你想活出怎样的人生》里面，夏子为什么要去塔里生产，真人进产房又触犯了什么忌讳？](https://www.zhihu.com/question/651605649)
 1. [现在 8K 电视技术成熟了吗，运用 AI 芯片的三星 8K 电视新品是什么水平？](https://www.zhihu.com/question/652248514)
-1. [韩国医生「辞职潮」风波持续，急救系统濒临崩溃，如何看待此事？「辞职潮」还将带来哪些影响？](https://www.zhihu.com/question/652336676)
 1. [如何评价《原神》的活动「茸茸城堡大喵险」？](https://www.zhihu.com/question/651952242)
 1. [即将上市智己L6有哪些亮点？是否值得期待？](https://www.zhihu.com/question/652137638)
 1. [明明R中可用的方法比Python多得多，为什么Python比R更像是数据科学的宠儿？](https://www.zhihu.com/question/637441452)
 1. [单论杀球林丹在羽坛是什么级别?](https://www.zhihu.com/question/644220827)
 1. [假如全世界的动物都突然拥有了智慧，会发生什么？](https://www.zhihu.com/question/650083214)
 1. [对你交易提升最大的一本书是什么？](https://www.zhihu.com/question/651942944)
-1. [如何看待 4 月 6 日消失已久的《英雄联盟》主播 Doinb 突然复播？](https://www.zhihu.com/question/652057567)
 1. [当星穹铁道的开拓者解锁所有命途后，实力定位有多强？](https://www.zhihu.com/question/651094209)
-1. [感动中国 2023 年度人物公布，俞鸿儒、刘玲琍、张雨霏等在列，他们有哪些瞬间让你印象深刻？](https://www.zhihu.com/question/652253057)
 1. [剧情过后，芙宁娜最后在民众心中是什么形象？](https://www.zhihu.com/question/649731443)
 1. [你觉得亲戚之间情感会渐行渐远吗？](https://www.zhihu.com/question/651685310)
 1. [自然界中有哪些紫色的花朵？](https://www.zhihu.com/question/652235994)
 1. [如何评价《英雄联盟》里的暮光之眼·慎？](https://www.zhihu.com/question/269767725)
 1. [空调的空气净化功能真的能净化空气吗？](https://www.zhihu.com/question/316813756)
 1. [地球上战斗力最强的动物是什么？](https://www.zhihu.com/question/650083119)
-1. [为什么NBA联赛没有降级制度？](https://www.zhihu.com/question/439863351)
 1. [《一人之下》为什么王也能参悟风后奇门？](https://www.zhihu.com/question/394091871)
 1. [《周处除三害》如果九发子弹都卡弹，陈桂林会放过尊者吗？](https://www.zhihu.com/question/650888065)
 1. [为什么以前很流行的播放器kmplayer几乎已死，现在全是流行PotPlayer？](https://www.zhihu.com/question/651412231)
@@ -74,7 +99,6 @@
 1. [如何让法令纹消除？](https://www.zhihu.com/question/467550061)
 1. [​伊朗高官发声，称「以色列在国外的大使馆将不再安全」，如何看待这一表态？](https://www.zhihu.com/question/652166241)
 1. [知名基金经理张坤重仓旗下全部产品，丘栋荣、葛兰「重金」自购，释放了哪些信号？](https://www.zhihu.com/question/652191296)
-1. [为什么修仙小说的人活了成千上万年却还是“人”的思维方式呢？](https://www.zhihu.com/question/646679936)
 1. [为什么数学书步骤不编写详细一点，让我们不再问“怎么来的”这样的问题？](https://www.zhihu.com/question/634381823)
 1. [成都「迪士尼」引众人打卡，派出所：近两天接到几十起投诉，目前已限流，如何看待该地成网红打卡点？](https://www.zhihu.com/question/652025378)
 1. [你觉得大学本科四年该怎样度过？](https://www.zhihu.com/question/651372346)
@@ -101,8 +125,6 @@
 1. [为什么腰椎间盘突出一定要锻炼才能根治？](https://www.zhihu.com/question/645464387)
 1. [加沙战争半年后，以色列的经济与生活发生了什么变化？](https://www.zhihu.com/question/652233223)
 1. [如果珍稀动物灭绝，会对我们的日常生活造成什么影响？](https://www.zhihu.com/question/650082919)
-1. [有什么让你吃一次就记一辈子的美食？](https://www.zhihu.com/question/442763529)
-1. [是否应该对另一半完全坦白过去的情史（包括细节）？](https://www.zhihu.com/question/31321209)
 1. [你去过的哪个城市最能满足人们对春天的幻想？](https://www.zhihu.com/question/649629614)
 1. [可以分享一张小猫奔向你的照片吗？](https://www.zhihu.com/question/646471496)
 1. [你在打《王者荣耀》时听过最温柔的话是什么？](https://www.zhihu.com/question/473782243)
@@ -127,7 +149,6 @@
 1. [有什么值得分享的正能量语录？](https://www.zhihu.com/question/652068929)
 1. [如果被误解是表达者的宿命，为何我们还要去证明自己？](https://www.zhihu.com/question/650357364)
 1. [中国古代为啥造不出来玻璃，只能烧出琉璃？](https://www.zhihu.com/question/651437535)
-1. [怎么区分自以为是和自信？](https://www.zhihu.com/question/643325085)
 1. [你说最好的爱是不放弃还是不打扰？](https://www.zhihu.com/question/646285104)
 1. [带年长的父母外出旅游，要注意什么？](https://www.zhihu.com/question/19855091)
 1. [你为什么喜欢《虹猫蓝兔七侠传》中的虹猫？](https://www.zhihu.com/question/408950216)
